--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
     "date-fns": "^2.30.0",
+    "embla-carousel-autoplay": "^8.5.2",
     "embla-carousel-react": "^8.0.0-rc17",
     "input-otp": "^1.1.0",
     "lucide-react": "^0.294.0",
